edited signup page

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -27,14 +27,23 @@ img {
 
 .main-content {
 	padding: 30px;
+	width: 60%;
+	margin: auto;
+	background-color: lavender;
 }
 
 .sign-in {
 	float: right;
 }
 
-.title-row {
+.input {
+	padding: 5px;
+	width: 300px;
+}
+
+.title-row hr {
 	border-bottom: 2px solid #6caee0;
+	width: 200px;
 }
 
 .content-just {
@@ -43,8 +52,29 @@ img {
 }
 
 .content-just .form-control{
-	width: 80%;
+	width: 70%;
 }
+
+.input-design {
+	padding: 5px;
+}
+
+
+.logo-dash {
+	width: 60%;
+	margin: auto;
+}
+
+/* OVERRIDES */
+.container-fluid {
+	margin-bottom: 20px;
+}
+
+.text-center .btn {
+	margin-top: 30px;
+}
+
+
 @media(max-width: 1093px){
   #sign-up .form-inline .form-control{
     width: 122px;
@@ -58,6 +88,8 @@ img {
 		border-radius: 0px;
 		margin: 0px;
 	}
+
+
 }
 
 @media (min-width: 768px) {
