--- a/templates/home.html
+++ b/templates/home.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
 
+
+<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-	<title>UPRD</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/custom.css">
+	<title>UPCRA</title>
+	<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/custom.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/custom.js"></script>
+	<script src="../static/js/jquery-3.2.1.min.js"></script>
+	<script src="../static/js/custom.js"></script>
 
 	<style>
 		body {font-family: 'Open Sans', sans-serif}
 	</style>
 </head>
-
 
 
 
@@ -31,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="#"><img class="shadow" src="img/logo.png" style="height: 120px; width: auto;"></a>
+      <a href="#"><img class="shadow" src="../static/img/logo.png" style="height: 120px; width: auto;"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
