--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,12 +1,24 @@
+object {
+  width: 100%;
+  height: 300px;
+}
+
 .shadow {
 	-webkit-filter: drop-shadow(8px 8px 10px black);
 	filter: drop-shadow(2px 2px 2px black);
 }
 
-.page-header .index{
+.page-header {
   	padding: 10px 20px 20px 30px;
   	margin: 0px 0px 0px;
   	border-bottom: 5px solid #eee;
+} 
+
+.page-header .bsearch{
+    padding: 10px 20px 20px 30px;
+    margin: 0px 0px 0px;
+    border-bottom: 5px solid #eee;
+    width: 50%;
 } 
 
 .form-group {
@@ -69,4 +81,9 @@
 .jumbotron p{
   text-align: center;
   font-size: 16px;
+}
+
+.searchbody {
+  width: 70%;
+  padding-left: 20px;
 }
