--- a/templates/advsearch.html
+++ b/templates/advsearch.html
@@ -4,11 +4,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<title>UPCRA - Advanced Search</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/custom.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<script src="../static/js/jquery-3.2.1.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="../static/js/custom.js"></script>
+	<script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
 
 	<style>
 		body {font-family: 'Open Sans', sans-serif}
@@ -19,26 +21,69 @@
 
   <h1>Advanced Search</h1>
 
-<div class="row">
-  <div class="col-lg-6">
-    <div class="input-group">
-      <div class="input-group-btn">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action <span class="caret"></span></button>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li role="separator" class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </div><!-- /btn-group -->
-      <input type="text" class="form-control" aria-label="...">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Search</button>
-      </span>
-    </div><!-- /input-group -->
-  </div><!-- /.col-lg-6 -->
-</div><!-- /.row -->
+	<form class="form-inline" role="form">
+			<div class="form-group">
+		        <input class="form-control" type="text" />
+		    </div>
+
+		    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+		    <br>
+			
+			<div class="form-group">
+				<label class="custom-control custom-checkbox">
+					<input type="checkbox" class="custom-control-input">
+					<span class="custom-control-indicator"></span>
+					<span class="custom-control-description">Topic</span>
+				</label>
+				<div class="form-group">
+			        <input class="form-control" type="text" />
+			    </div>
+
+			    <br>
+				<label class="custom-control custom-checkbox">
+					<input type="checkbox" class="custom-control-input">
+					<span class="custom-control-indicator"></span>
+					<span class="custom-control-description">Year</span>
+				</label>
+				<div class="form-group">
+			        <input class="form-control" type="text" />
+			    </div>
+
+				<br>
+				<label class="custom-control custom-checkbox">
+					<input type="checkbox" class="custom-control-input">
+					<span class="custom-control-indicator"></span>
+					<span class="custom-control-description">Course</span>
+				</label>
+				<div class="form-group">
+			        <input class="form-control" type="text" />
+			    </div>
+
+			    <br>
+				<label class="custom-control custom-checkbox">
+					<input type="checkbox" class="custom-control-input">
+					<span class="custom-control-indicator"></span>
+					<span class="custom-control-description">Field</span>
+				</label>
+				<div class="form-group">
+			        <input class="form-control" type="text" />
+			    </div>
+			    
+				<br>
+				<label class="custom-control custom-checkbox">
+					<input type="checkbox" class="custom-control-input">
+					<span class="custom-control-indicator"></span>
+					<span class="custom-control-description">Author</span>
+				</label>
+				<div class="form-group">
+			        <input class="form-control" type="text" />
+			    </div>
+				
+		    </div>
+			
+		    
+	    
+	</form>
 
 
 
