--- a/templates/basicsearch.html
+++ b/templates/basicsearch.html
@@ -4,10 +4,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<title>UPCRA - Search</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/custom.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<script src="../static/js/jquery-3.2.1.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="../static/js/custom.js"></script>
 	<script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
 
@@ -21,29 +22,24 @@
   <h1>Basic Search</h1>
 
 <div class="row">
-  <div class="col-lg-6">
-    <div class="input-group">
-      <div class="input-group-btn">
-      	<div class="dropdown">
-	        <button type="button" class="btn btn-default dropdown-toggle" id="dropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	        Action 
-	        <span class="caret"></span>
-	        </button>
-	        <ul class="dropdown-menu" aria-labelledby="dropdown1">
-	          <li><a href="#">Action</a></li>
-	          <li><a href="#">Another action</a></li>
-	          <li><a href="#">Something else here</a></li>
-	          <li><a href="#">Separated link</a></li>
-	        </ul>
-        </div>
-      </div><!-- /btn-group -->
-      <input type="text" class="form-control" aria-label="...">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Search</button>
-      </span>
-    </div><!-- /input-group -->
-  </div><!-- /.col-lg-6 -->
-</div><!-- /.row -->
+<form class="form-inline" role="form">
+		<div class="form-group">
+	            <select class="form-control">
+	                <option value="topic" selected>Topic</option>
+	                <option value="year">Year</option>
+	                <option value="course">Course</option>
+	                <option value="field">Field</option>
+	                <option value="author">Author</option>
+	            </select>
+	    </div>
+		<div class="form-group">
+	        <input class="form-control" type="text" />
+	    </div>
+	    
+    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+</form>
+</div>
+                                      
 
 
 
