--- a/templates/search.html
+++ b/templates/search.html
@@ -6,12 +6,24 @@
 <body>
 	<form action='/search' method="post">
 		<label for="search">Search</label>
-		<input type="text" name="title">
+		<input type="text" name="key">
+
+		<label for="all">All</label>
+		<input type="radio" value="all" name="category">
+
+		<label for="author">Author</label>
+		<input type="radio" value="author" name="category">
+
+		<label for="title">Title</label>
+		<input type="radio" value="title" name="category">
+
+		<label for="field">Field</label>
+		<input type="radio" value="field" name="category">
+
 		<button>Search</button>
 	</form>
 	{% for work in works %}
-	<p>{{ work.title }}</p>
+		<p>{{ work.title }}</p>
 	{% endfor %}
-	<p> {{ searchFor }} </p>
 </body>
 </html>
