--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,7 +20,7 @@
 			<input type="text" name="field" id="field">
 
 			<label for="abstract">Abstract</label>
-			<textarea name="abstract"></textarea>
+			<textarea name="abstract" id="abstract"></textarea>
 
 		</div>
 		<button> Upload </button>
