--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,8 @@
 </head>
 <body>
 	<form action="/signup" method="post" name="signup">
-		<label for="first_name">First Name</label>
-		<input type="text" name="first_name"> <br>
-
-		<label for="last_name">Last Name</label>
-		<input type="text" name="last_name"><br>
+		<label for="name">Name</label>
+		<input type="text" name="name"> <br>
 
 		<label for="email">Email</label>
 		<input type="text" name="email"><br>
