--- a/templates/search.html
+++ b/templates/search.html
@@ -6,7 +6,7 @@
 <body>
 	<form action='/search' method="post">
 		<label for="search">Search</label>
-		<input type="text" name="key">
+		<input type="text" name="key"><br>
 
 		<label for="all">All</label>
 		<input type="radio" value="all" name="category">
