--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -66,7 +66,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Preview of </h4>
+        <h4 class="modal-title">Abstract</h4>
       </div>
       <div class="modal-body">
         <p>Insert Sample Here</p>
