added author.html view

--- a/templates/file.html
+++ b/templates/file.html
@@ -6,6 +6,7 @@
 <body>
 	<h1>{{ file.title }}</h1>
 	<h2>Date Published: {{ file.date }}</h2>
-	<h2>Author: {{ user.last_name }}, {{ user.first_name }}</h2>
+	<h2>Author: {{ user.name }} </h2>
+	<h2>Email: {{ user.email }} </h2>
 </body>
 </html>
