trial for email

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,9 +16,12 @@
 			<label for="year">Date</label>
 			<input type="date" name="date" id="date">
 
-
 		</div>
 		<button> Upload </button>
+
+		<form class="" action="/sendMail" method="post">
+			<button type="button" name="button">send mail</button>
+		</form>
 	</form>
 </body>
 </html>
