--- a/templates/home.html
+++ b/templates/home.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<title>UPRD</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/custom.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/custom.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/custom.js"></script>
+	<script src="/static/js/jquery-3.2.1.min.js"></script>
+	<script src="/static/js/custom.js"></script>
 
 	<style>
 		body {font-family: 'Open Sans', sans-serif}
@@ -31,21 +31,21 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="#"><img class="shadow" src="img/logo.png" style="height: 120px; width: auto;"></a>
+      <a href="/"><img class="shadow" src="/static/img/logo.png" style="height: 120px; width: auto;"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <div class="nav navbar-nav navbar-right">
-      	<form class="form-inline">
-		  <div class="form-group">
-		    <input type="email" class="form-control" id="inputEmail" placeholder="Email Address">
-		  </div>
-		  <div class="form-group">
-		    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-		  </div>
-		  <button type="submit" class="btn btn-default">Submit</button>
-		</form>
+      	<form class="form-inline" action="/signin" method="post" name="signin">
+		  		<div class="form-group">
+		    		<input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email Address">
+		  		</div>
+		  		<div class="form-group">
+		    		<input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
+		  		</div>
+		  		<button type="submit" class="btn btn-default">Sign in</button>
+				</form>
       </div>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -74,7 +74,7 @@
 <div>
 
 <script>
-	
+
 </script>
 
 
