routing and conflicts merging

--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -27,11 +27,8 @@
 				<div class="title-row">
 					<h2 class="text-center">SIGN UP</h2>
 				</div>
-				<label for="first_name">First Name</label>
-				<input type="text" name="first_name"> <br>
-
-				<label for="last_name">Last Name</label>
-				<input type="text" name="last_name"><br>
+				<label for="last_name">Name</label>
+				<input type="text" name="name"><br>
 
 				<label for="email">Email</label>
 				<input type="text" name="email"><br>
