--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
-<<<<<<< HEAD
+
 	<div class="page-header">
 		<div class="container-fluid">
 			<div class="col-md-6 col-xs-6" id="logo">
@@ -24,51 +24,26 @@
 	    		<div id="sign-in">
 			      	<form class="form-inline" method="POST" action="/signin">
 					  <div class="form-group">
-					    <input type="email" class="form-control" id="inputEmail" placeholder="Email Address">
+					    <input type="email" class="form-control" name="email" id="inputEmail" placeholder="Email Address">
 					  </div>
 					  <div class="form-group">
-					    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+					    <input type="password" class="form-control" name="password" id="inputPassword" placeholder="Password">
 					  </div>
 					  <button type="submit" class="btn btn-default">SIGN IN</button>
 					  <a role="button" class="btn btn-primary" href="/sign-up">SIGN UP</a>
 					</form>
 		     	</div>
-		      <!-- .sign-in -->
+
 		    </div>
 	 	</div>
-	  <!-- .container-fluid -->
+
 	</div>
-	<!-- .page-header -->
-=======
-	<form action="/signup" method="post" name="signup">
-		<label for="name">Name</label>
-		<input type="text" name="name"> <br>
-
-		<label for="email">Email</label>
-		<input type="text" name="email"><br>
-
-		<label for="password">Password</label>
-		<input type="password" name="password"><br>
-
-		<label for="confirm_password">Confirm Password</label>
-		<input type="password" name="confirm_password"><br>
-		<button>Sign up</button>
-	</form>
-	<br>
-	<br>
-	<form action="/signin" method="post" name="signin">
-		<label for="email">Email</label>
-		<input type="text" name="email"><br>
-
-		<label for="email">Password</label>
-		<input type="password" name="password"><br>
->>>>>>> f824dffc06ee52ef5b693c97eeadbc8fd508d4b2
 
 	<div class="navbar navbar-default">
 	  	<ul class="nav navbar-nav">
 	  		<li class="text-center"><p class="navbar-cat">ONLINE CATALOG</p></li>
-	   		<li class="text-center"><a id="basicSearch" onclick="load_bSearch()" href="#">Basic Search</a></li>
-	   		<li class="text-center"><a id="advSearch" onclick="load_aSearch()" href="#">Advanced Search</a></li>
+	   		<li class="text-center"><a id="basicSearch" onclick="load_bSearch()" href="/basic-search">Basic Search</a></li>
+	   		<li class="text-center"><a id="advSearch" onclick="load_aSearch()" href="/listing">Listing</a></li>
 	   		<li class="text-center"><a id="newAquisition" href="#">New Aquisitions</a></li>
 	  	</ul>
 	</div>
