--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 	<div class="navbar navbar-default">
 	  	<ul class="nav navbar-nav">
 	  		<li class="text-center"><p class="navbar-cat">ONLINE CATALOG</p></li>
-	   		<li class="text-center"><a id="basicSearch" onclick="load_bSearch()" href="/basic-search">Basic Search</a></li>
+	   		<li class="text-center"><a id="basicSearch" onclick="load_bSearch()" href="/search">Basic Search</a></li>
 	   		<li class="text-center"><a id="advSearch" onclick="load_aSearch()" href="/listing">Listing</a></li>
 	   		<li class="text-center"><a id="newAquisition" href="#">New Aquisitions</a></li>
 	  	</ul>
