--- a/templates/basicsearch.html
+++ b/templates/basicsearch.html
@@ -25,23 +25,23 @@
   <h1>Basic Search</h1>
 
 <div class="row">
-<form class="form-inline" role="form">
+<form class="form-inline" role="form" action="/search" method="post">
 		<div class="form-group">
-	            <select class="form-control">
-	                <option value="all" name="category" selected>All</option>
-	                <option value="author" name="category">Author</option>
+	            <select class="form-control" name="category">
+	                <!-- <option value="all" name="category" selected>All</option> -->
+	                <option value="author"  selected>Author</option>
 	                <option value="title" name="category" >Title</option>
 	                <option value="field" name="category">Field</option>
 	            </select>
 	    </div>
 		<div class="form-group">
-	        <input class="form-control" type="text" />
+	        <input class="form-control" type="text" name="key" />
 	    </div>
 
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
 </form>
 
-{% for work in works %}
+<!-- {% for work in works %}
 	{% if work.name != null %}
 	<p>Author: {{ work.name }}</p>
 	{% else %}
@@ -49,19 +49,25 @@
 	<p>Field: {{ work.field }}</p><br>
 	{% endif %}
 {% endfor %}
-</div>
+</div> -->
 
 <table class="table" id="resultsTable">
 	<tbody>
+		{%for work in works %}
 		<tr>
 			<td width="90%">
 			<div class="resultItem">
-				 <h4><b>{{ work.title }}</b></h4>
-				 <p>{{ work.name }}</p>
+				{% if work.name != null %}
+				<p><a href="#">{{ work.name }}</a></p>
+				{% else %}
+				<h4><b>{{ work.title }}</b></h4>
+				{{ work.field }}
+				{% endif %}
 			</div>
 			</td>
 		<td width="10%"><button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Preview</button></td>
 		</tr>
+		{% endfor %}
 	</tbody>
 </table>
 
