--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,9 +28,7 @@
 						<img class="shadow" src="/static/img/logo.png">
 					</a>
 			</div>
-			<form class="" style="float: right" action="/signout" method="post">
-					<button type="submit" class="btn btn-default">SIGN OUT</button>
-			</form>
+			<a href="/signout" style="float: right" class="btn btn-default">SIGN OUT</a>
 		</div>
 	</div>
 	<div class="navbar navbar-default">
