--- a/templates/file.html
+++ b/templates/file.html
@@ -47,6 +47,8 @@
 		<h4>Date Published: {{ file.date }}</h4>
 		<h4>Author: {{ user.name }} </h4>
 		<h4>Email: {{ user.email }} </h4>
+
+		<!-- <h4>{{ work.abstract }} </h4> -->
 	</div>
 </body>
 </html>
