--- a/templates/basicsearch.html
+++ b/templates/basicsearch.html
@@ -77,7 +77,8 @@
 					{% if work.name != null %}
 					<p><a href="/author/{{work.id}}">{{ work.name }}</a></p>
 					{% else %}
-					<h4><b>{{ work.title }}</b></h4>
+					<!-- <h4><b>{{ work.title }}</b></h4> -->
+					<h4><a href="/file/{{work.id}}">{{ work.title }}</a></h4>
 					{{ work.field }}
 					{% endif %}
 				</div>
